# photo-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/cull/: __init__.py  calibrate.py  cli.py  cli_bootstrap.py  cli_config.py  cli_help.py  cli_pipeline.py  cli_results.py  cli_review.py  cli_subcommands.py  clip_loader.py  config.py  dashboard.py  dashboard_render.py  dashboard_show.py  disk.py  env_bootstrap.py  io_silence.py  manifest_baker.py  model_cache.py  models.py  override_log.py  pipeline.py  report.py  report_card.py  review_handoff.py  router.py  saliency.py  search.py  setup_command.py  sidecar.py  taste_trainer.py  vlm_registry.py  vlm_session.py
src/cull_fast/: __init__.py  cli_hook.py  fusion_fast.py  musiq.py  pipeline_fast.py
tests/: _capture_p1_baseline.py  _capture_p3_baseline.py  _capture_p4lite_baseline.py  _golden_helpers.py  _mock_scorers.py  conftest.py  manual_real_blur_pool_safety.py  test_aesthetic_uses_get_image_features.py  test_blur.py  test_blur_detector_pool_safety.py  test_burst.py  test_cli.py  test_clip_checkpoint_match.py  test_curator.py  test_dashboard_stage2_count.py  test_explain.py  test_exposure.py  test_fusion.py  test_override_log.py  test_parser.py  test_perf_p1_batch_golden.py  test_perf_p3_pool_golden.py  test_perf_p4lite_clip_golden.py  test_pipeline_reducer.py  test_pipeline_s4_tui.py  test_portrait.py  test_report_card.py  test_saliency.py  test_search.py  test_sidecar.py  test_stage3_prompt_context.py  test_taste_trainer.py
tests/cull_fast/: __init__.py  conftest.py  test_cli_hook.py  test_fusion_rescale.py  test_imports_stable.py  test_musiq_mocked.py  test_pipeline_fast_mocked.py
tests/offline/: __init__.py  (+18 more)
(+85 files in other folders)
